Fix for modal z-index issues

--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -5,6 +5,12 @@
   width:100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
+  display: block;
+  z-index: 1;
+}
+
+.modal.hide {
+  display: none;
 }
 
 .modal-main {
@@ -16,12 +22,4 @@
   top:50%;
   left:50%;
   transform: translate(-50%,-50%);
-}
-
-.display-block {
-  display: block;
-}
-
-.display-none {
-  display: none;
 }
